--- a/src/components/ListItem/ListItem.css
+++ b/src/components/ListItem/ListItem.css
@@ -1,125 +1,150 @@
 .list-container{
     display: flex;
-    height:18rem;
+    height:6.75rem;
     width:calc(100% - 2rem);
     background-color: #fff;
     margin:2rem auto;
-    border-radius: 1rem;
+    border-radius: .2rem;
     box-shadow: 5px 5px 25px 0 rgba(46,61,73,.2);
     flex-direction: column;
     position: relative;
+    min-width: 270px;
+    max-width: 500px;
+    -webkit-transition: .3s ;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s;
+    margin-bottom:0;
+    text-decoration: none;
+}
+.list-container:hover{
+    box-shadow: 0px 0px 0px 0px rgba(255,255,255,.2);
 }
 
-.list-container::before{
-    content:"";
-    display: block;
-    position: absolute;
-    width:100%;
-    height:50%;
-    background: rgba(255,255,255,.3);
-    border-radius: 1rem 1rem 0 0 ;
-    box-shadow: 5px 5px 25px 0 rgba(46,61,73,.2);
-
-}
+/*.list-container::before{*/
+    /*content:"";*/
+    /*display: block;*/
+    /*position: absolute;*/
+    /*width:100%;*/
+    /*height:50%;*/
+    /*background: rgba(255,255,255,.3);*/
+    /*border-radius: 1rem 1rem 0 0 ;*/
+    /*box-shadow: 5px 5px 25px 0 rgba(46,61,73,.2);*/
+/*}*/
+/*.list-container::before:hover{*/
+    /*box-shadow: 0px 0px 0px 0px rgba(255,255,255,.2);*/
+/*}*/
 .icon{
-    width:5rem;
-    height:5rem;
-    border-radius: 50%;
+    width:4.75rem;
+    height:4.75rem;
+    border-radius:9px;
+    border:1px solid #f0f0f0;
     overflow: hidden;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    margin-right:.8rem;
 }
 .icon img{
-    width:5rem;
-    height:5rem;
+    width:4.75rem;
+    height:4.75rem;
 }
 
 .list-container-top{
+    width:100%;
+    height:100%;
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    justify-content: space-around;
-    /*background-color: rgb(199,52,56);*/
-    background-color: #02b3e4;
-    color:#fff;
-    border-radius: 1rem 1rem 0 0;
-    flex: 1;
+    box-sizing: border-box;
+    padding:0 1rem;
 }
 
 .title-container{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-end;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
+    justify-content: space-between;
+    color:rgba(80,163,164,100);
 }
-.list-container-bottom{
+.title-container > div:nth-of-type(1){
+    font-size: 1.5rem;
+}
+.right-container{
     display: flex;
-    flex: 1;
-    border-radius: 0 0 1rem 1rem;
     flex-direction: column;
+    justify-content: space-between;
+    height:4.65rem;
+    flex: 4;
 }
+/*.list-container-bottom{*/
+    /*display: flex;*/
+    /*flex: 1;*/
+    /*border-radius: 0 0 1rem 1rem;*/
+    /*flex-direction: column;*/
+/*}*/
 
 .tag-container{
     display: flex;
     flex-direction: row;
-    flex: 1;
 }
 
 .tag-item-container{
     display: flex;
     flex-direction: row;
-    flex: 2;
     align-items: center;
 }
 .tag-item-container div{
-    background-color:#fff;
+    /*background-color:rgba(250,195,11,100);*/
+    background-color: rgba(80,163,164,100);
     color:#ffffff;
-    border-radius: 4px;
-    padding:.1rem 1rem;
-    margin-left: .6rem;
-}
-
-.tag-item-container div:nth-child(1){
-    background-color: rgb(98,49,150);
-}
-.tag-item-container div:nth-child(2){
-    background-color: rgb(5,155,77);
-}
-.tag-item-container div:nth-child(3){
-    background-color: rgb(0,124,277);
-}
-
-.tag-length{
-    color:#fff;
-    text-align: center;
-    flex: 1;
-
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.tag-length div{
-    background-color:rgb(199,52,56);
-    padding:.1rem 1rem;
     border-radius: 4px;
+    padding:.2rem;
+    margin-right: .3rem;
 }
 
+.tag-item-container div:nth-child(1){
+    background-color: rgb(156,125,240);
+}
+.tag-item-container div:nth-child(2){
+    background-color: rgb(26,175,238);
+}
+.tag-item-container div:nth-child(3){
+    background-color: rgba(80,163,164,100);
+}
 
-.time-container{
-    flex: 1;
-    display: flex;
-    font-size: 1.5rem;
-    color:#333;
+.buttom-container{
     display: flex;
     justify-content: space-between;
-    box-sizing: border-box;
-    padding:0 3rem 0 2rem;
 }
 
-.time-container a{
-    color:#2e3d49;
+.money{
+    font-size: 1.2rem;
+    color:rgba(80,163,164,100);
+}
+.list-container-bottom{
+    width:calc(100% - 4rem);
+    text-align: center;
+    margin:-1rem auto;
+    height:3rem;
+    border-radius: 5px;
+    box-shadow: 5px 5px 25px 0 rgba(46,61,73,.2);
+
+    background-color: #fff;
+}
+.list-container-bottom a{
+    color:#999;
     text-decoration: none;
+    padding-top:1.2rem;
+    display: block;
+    width:100%;
+    height:100%;
+    box-sizing: border-box;
 }
-
