--- a/src/containers/Home/home.css
+++ b/src/containers/Home/home.css
@@ -10,6 +10,8 @@
     trsnsition:all .3s ease;
     padding-top:1.5rem;
     padding-bottom: 3.4rem;
+    max-width: 500px;
+    margin:0 auto;
 }
 
 .link-container a{
@@ -27,6 +29,16 @@
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
+    border:1px solid #fff;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s;
+}
+.link-container a:hover{
+    box-shadow: 0px 0px 0px 0px rgba(255,255,255,.2);
+    border:1px solid #f0f0f0;
 }
 .banner{
     background-image: url('club-2492011_1280.jpg');
@@ -37,6 +49,9 @@
     text-align: center;
     color:#fff;
     font-size: 2rem;
+    max-width: 500px;
+    margin:0 auto;
+
 }
 .banner::before{
     content: " 现金贷，无担保，门槛低 ";
@@ -61,6 +76,7 @@
     color:#fff;
     background-color: #fff;
     box-shadow: 5px 0 15px 0 rgba(46,61,73,.12);
+
 }
 
 .footer a{
